--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 html {
     font-size: 62.5%;
     font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
 }
 
 li {
@@ -31,7 +32,7 @@ h3{
     justify-content: space-between;
     align-items: center;
     padding: 1.5rem 5rem;
-    background-color: #03071e;
+    background-color: #04081b;
 }
 
 /* hamburger menu */
@@ -79,7 +80,7 @@ h3{
 /* Hero Section */
 .hero-img{
     position: relative;
-    filter: brightness(40%);
+    filter: brightness(20%);
     height: 90vh;
     width: 100%;
 }
@@ -94,9 +95,9 @@ h3{
 }
 
 .hero-btn{
-    padding: 10px 20px;
+    padding: 10px 50px;
     border-radius: 50px;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 700;
     color: #dc2f02;
     border: none;
